--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 h2 {
   font-size: 26px;
   font-weight: 400;
-  margin: 0 10px 10px 10px;
+  margin: 5px 20px 20px 20px;
   text-align: center;
 }
 
